--- a/celvis/angular.json
+++ b/celvis/angular.json
@@ -107,7 +107,8 @@
               "node_modules/primeng/resources/primeng.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           }
         }
       }
