--- a/celvis/package.json
+++ b/celvis/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "d3-graphviz": "^4.1.1",
     "graphviz": "^0.0.9",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.3",
